Completed transforming the list of items into a list of components

--- a/src/index.css
+++ b/src/index.css
@@ -46,6 +46,17 @@ nav a:active {
   color: tomato;
   border-bottom: 2px solid tomato;
 }
+nav ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+nav li {
+  margin-right: 20px;
+}
 
 #home {
   height: 50vh;
